--- a/jsm_banking/package.json
+++ b/jsm_banking/package.json
@@ -17,7 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
-    "next": "14.2.30",
+    "next": "^14.2.30",
     "query-string": "^9.2.2",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
